[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdb"
version = "0.0.1"
description = "Benchmarking different database schema designs for Chia's coin database"
requires-python = ">=3.8"
dependencies = [
    "rocks_pyo3 @ git+https://github.com/richardkiss/rocks_pyo3.git",
    "cffi>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dump_blocks = "cdb.cmds.dump_blocks:main"
load_blocks = "cdb.cmds.load_blocks:main"

